250203 youtubefork clone 코딩

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ server.port=8080
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/youtube
 spring.datasource.username=youtube
-spring.datasource.password=ENC(/+sKTeT1sPx3LcVxp8QLXw==)
+spring.datasource.password=ENC(aaDzD3N9f2z4k2V3hsACEw==)
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
@@ -34,7 +34,7 @@ logging.charset.file=UTF-8
 
 
 
-jasypt.encryptor.location=d:/secure/secure.properties
+jasypt.encryptor.location=/Users/hamgyusang/DEV/Spring/youtubefork/secure.properties
 
 file.upload-dir=d:/upload
 
