250207 youtubefork clone 코딩 (아이디 중복체크, 비밀번호 재설정 구현 진행중)

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -26,7 +26,7 @@ logging.level.io.goorm.youtube.exception.GlobalExceptionHandler=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 
-logging.file.name=d:/logs/application.log
+logging.file.name=/Users/hamgyusang/DEV/Spring/youtubefork/logs/application.log
 logging.file.max-size=10MB
 logging.file.max-history=10
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
@@ -36,7 +36,7 @@ logging.charset.file=UTF-8
 
 jasypt.encryptor.location=/Users/hamgyusang/DEV/Spring/youtubefork/secure.properties
 
-file.upload-dir=d:/upload
+file.upload-dir=/Users/hamgyusang/DEV/Spring/youtubefork/
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
